trying a push for static html

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ in html
         </header>
         <nav id = "menu">
             <hr width = "50%"/>
-           <a href="index.html" >Home</a>
+           <a href="home.html" >Home</a>
            <a href="about.html">About</a>
            <a class = "current" href="contact.html">Contact</a>
         </nav>
