--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@ in html
         </header>
         <nav id = "menu">
             <hr width = "50%"/>
-           <a class = "current" href="index.html" >Home</a>
+           <a class = "current" href="home.html" >Home</a>
            <a href="about.html">About</a>
            <a href="contact.html">Contact</a>
         </nav>
